Removed the Logo from Layout.Added description in _ViewImport.cshtml

--- a/Company.MaintenanceApplication/Views/_ViewImports.cshtml
+++ b/Company.MaintenanceApplication/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using Company.MaintenanceApplication
+﻿@*Web.config in View Folder is no longer exists.
+Please use the _ViewImports.cshtml to import the namespaces within view pages*@
+@using Company.MaintenanceApplication
 @using Company.MaintenanceApplication.Models
 @using Company.MaintenanceApplication.Models.AccountViewModels
 @using Company.MaintenanceApplication.Models.ManageViewModels
