--- a/Company.MaintenanceApplication/Views/Shared/_Layout.cshtml
+++ b/Company.MaintenanceApplication/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><img src="~/images/logo.jpg"  alt="Company.MaintenanceApplication" style="margin-top: -15px;"/></a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">@*<img src="~/images/logo.jpg"  alt="Company.MaintenanceApplication" style="margin-top: -15px;"/>*@Application Name/Logo</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
