--- a/Company.MaintenanceApplication/Views/Home/Index.cshtml
+++ b/Company.MaintenanceApplication/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/image1.jpg" alt="ASP.NET" class="img-responsive" />            
+            <img src="~/images/banner1.jpg" alt="ASP.NET" class="img-responsive" />            
             <div class="carousel-caption" role="option">
                 <p>
                     learn how to build asp.net apps that can run anywhere.
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/image3.jpg" alt="Visual Studio" class=" img-responsive"  />
+            <img src="~/images/banner3.jpg" alt="Visual Studio" class=" img-responsive"  />
             <div class="carousel-caption" role="option">
                 <p>
                     There are powerful new features in Visual Studio for building modern web apps.
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/image1.jpg" alt="Package Management" class="img-responsive" />
+            <img src="~/images/banner1.jpg" alt="Package Management" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/image3.jpg" alt="Microsoft Azure" class="img-responsive" />
+            <img src="~/images/banner3.jpg" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
