--- a/Company.MaintenanceApplication/Views/Home/Index.cshtml
+++ b/Company.MaintenanceApplication/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
         <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />            
+        <div class="carousel-item active">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="ASP.NET" class="img-fluid" />            
             <div class="carousel-caption" role="option">
                 <p>
                     learn how to build asp.net apps that can run anywhere.
@@ -21,8 +21,8 @@
                 </p>
             </div>
         </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Visual Studio" class=" img-responsive"  />
+        <div class="carousel-item">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Visual Studio" class=" img-fluid"  />
             <div class="carousel-caption" role="option">
                 <p>
                     There are powerful new features in Visual Studio for building modern web apps.
@@ -32,8 +32,8 @@
                 </p>
             </div>
         </div>
-        <div class="item">
-            <img src="~/images/banner1.svg" alt="Package Management" class="img-responsive" />
+        <div class="carousel-item">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Package Management" class="img-fluid" />
             <div class="carousel-caption" role="option">
                 <p>
                     Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
@@ -43,8 +43,8 @@
                 </p>
             </div>
         </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
+        <div class="carousel-item">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Microsoft Azure" class="img-fluid" />
             <div class="carousel-caption" role="option">
                 <p>
                     Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
@@ -55,14 +55,15 @@
             </div>
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+   
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
-    </a>
+    </a>    
 </div>
 
 <div class="row">
