--- a/Company.MaintenanceApplication/Views/Account/Register.cshtml
+++ b/Company.MaintenanceApplication/Views/Account/Register.cshtml
@@ -2,6 +2,29 @@
 @{
     ViewData["Title"] = "Register";
 }
+<style>
+    html,
+    body {
+        height: 100%;
+        background-color: #333;
+        /*background-image: url("/images/loginbg.jpg") !important*/
+    }
+
+
+    body {
+        color: #fff;
+        text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+    }
+
+    hr {
+        display: block;
+        height: 1px;
+        border: 0;
+        border-top: 1px solid #ccc;
+        margin: 1em 0;
+        padding: 0;
+    }
+</style>
 
 <h2>@ViewData["Title"].</h2>
 
