--- a/Company.MaintenanceApplication/Views/Shared/_LoginPartial.cshtml
+++ b/Company.MaintenanceApplication/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,11 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    var user = await UserManager.FindByIdAsync(UserManager.GetUserId(User));
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
-                <a  class="nav-link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a  class="nav-link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @user.FirstName!</a>
             </li>
             <li class="nav-item">
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
