--- a/Company.MaintenanceApplication/Views/Account/Login.cshtml
+++ b/Company.MaintenanceApplication/Views/Account/Login.cshtml
@@ -11,8 +11,8 @@
     html,
     body {
         height: 100%;
-        /*background-color: #333;*/
-        background-image: url("/images/loginbg.jpg") !important
+        background-color: #333;
+        /*background-image: url("/images/loginbg.jpg") !important*/
     }
     body {
         color: #fff;
@@ -28,13 +28,15 @@
         padding: 0;
     }
 </style>
-<h2>@ViewData["Title"].</h2>
 
-    <div class="row " >
+<h2 style="text-align:center">@ViewData["Title"].</h2>
+<hr />
+    <div class="mx-auto" style="width:396px">
+        
         <div class="col-md-12 col-sm-12">
             <section>
                 <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">                    
-                    <hr />
+                    
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Email" class="col-md-2 control-label"></label>
